crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__expanded_tool_output_cell.snap
---
source: crates/braze-tui/src/history_cell.rs
expression: "render_to_buffer(&cell, 40)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 3 },
    content: [
        "✓ read_file (completo)                  ",
        "linea uno                               ",
        "linea dos                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
