crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__harness_note_cell.snap
---
source: crates/braze-tui/src/history_cell.rs
assertion_line: 776
expression: "render_to_buffer(&cell, 50)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 2 },
    content: [
        "⚑ harness → modelo · iteration_cap                ",
        "  The next round is this turn's last.             ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 34, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
