crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__help_cell.snap
---
source: crates/braze-tui/src/history_cell.rs
assertion_line: 823
expression: "render_to_buffer(&HelpCell, 50)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 23 },
    content: [
        "Atajos                                            ",
        "Enter enviar · Ctrl+J salto de línea              ",
        "Esc interrumpe el turno en curso (o deniega una   ",
        "aprobación pendiente)                             ",
        "Ctrl+T ver el output completo de la última tool   ",
        "call                                              ",
        "Esc Esc (dos veces, ocioso) retroceder a un       ",
        "mensaje anterior y editarlo                       ",
        "Ctrl+C / Ctrl+D (composer vacío) salir            ",
        "                                                  ",
        "Comandos                                          ",
        "/help  este mensaje                               ",
        "/model  cambiar de backend/modelo (picker; /model ",
        "backend[:modelo] directo)                         ",
        "/skills  listar las skills disponibles e insertar ",
        "una mención $skill                                ",
        "/quit, /exit  salir de braze                      ",
        "                                                  ",
        "Menciones                                         ",
        "@ seguido de parte de un nombre de archivo abre un",
        "buscador                                          ",
        "$ seguido del nombre de una skill la carga para   ",
        "ese mensaje                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 6, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
