crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__notice_cell.snap
---
source: crates/braze-tui/src/history_cell.rs
expression: "render_to_buffer(&cell, 40)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 1 },
    content: [
        "⏸ interrupted by user                   ",
    ],
    styles: [
        x: 0, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
