crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__question_cell_unanswered.snap
---
source: crates/braze-tui/src/history_cell.rs
assertion_line: 841
expression: "render_to_buffer(&cell, 50)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 1 },
    content: [
        "? ¿a o b? → sin respuesta                         ",
    ],
    styles: [
        x: 0, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
