crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__tool_call_cell_done_error.snap
---
source: crates/braze-tui/src/history_cell.rs
assertion_line: 893
expression: "render_to_buffer(&cell, 40)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 1 },
    content: [
        "✗ read_file: file not found             ",
    ],
    styles: [
        x: 0, y: 0, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
