crates/braze-tui/src/snapshots/braze_tui__history_cell__snapshot_tests__tool_call_cell_done_success.snap
---
source: crates/braze-tui/src/history_cell.rs
expression: "render_to_buffer(&cell, 40)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 1 },
    content: [
        "✓ echo: echoed: hi                      ",
    ],
    styles: [
        x: 0, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
